refactor: handler 내 Swagger 구조체 경로를 types 패키지로 명확히 지정
