# backend/internal/handlers/types/meta.go
@@ -1,5 +1,0 @@
-package types
-
-type HealthResponse struct {
-	Status string `json:"status" example:"ok"`
-}
